[package]
name = "gvdb"
version = "0.1.0"
edition = "2021"
description = "Read and write GLib GVariant database files"
repository = "https://github.com/felinira/gvdb-rs"
license = "LGPL-3.0-or-later"
keywords = [ "gvdb", "glib", "gresource", "glib-compile-resources" ]
categories = [ "gui", "data-structures", "encoding" ]
exclude = [ ".idea" ]

[dependencies]
safe-transmute = "0.11.2"
walkdir = "2.3.2"

glib = { version = "0.15.10", optional = true }
xml-rs = { version = "0.8.4", optional = true }
serde-xml-rs = { version = "0.5.1", optional = true }
serde = { version = "1.0.136", features = [ "derive" ], optional = true }
json = { version  = "0.12.4", optional = true }
flate2 = { version = "1.0.23", optional = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
matches = "0.1.9"
json = "0.12.4"
glib = "0.15.10"

# Use zlib for binary compatibility in tests
flate2 = { version = "1.0.23", features = [ "zlib" ] }

[features]
gresource = [ "dep:xml-rs", "dep:serde-xml-rs", "dep:serde", "dep:json", "dep:flate2" ]
glib = [ "dep:glib" ]
default = [ "gresource", "glib" ]
