[package]
name = "gvdb"
version = "0.2.0"
edition = "2021"
description = "Read and write GLib GVariant database files"
repository = "https://github.com/felinira/gvdb-rs"
license = "MIT"
keywords = [ "gvdb", "glib", "gresource", "compile-resources" ]
categories = [ "gui", "data-structures", "encoding" ]
exclude = [ ".idea" ]

[dependencies]
safe-transmute = "0.11.2"
walkdir = "2.3.2"
memmap2 = "0.5.3"

glib = { version = "0.15.10", optional = true }
xml-rs = { version = "0.8.4", optional = true }
serde-xml-rs = { version = "0.5.1", optional = true }
serde = { version = "1.0.136", features = [ "derive" ] }
json = { version  = "0.12.4", optional = true }
flate2 = { version = "1.0.23", optional = true }
zvariant = { version = "3.2.1", default-features = false, features = ["gvariant"] }
byteorder = "1.4.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
matches = "0.1.9"
json = "0.12.4"
glib = "0.15.10"

# Use zlib for binary compatibility in tests
flate2 = { version = "1.0.23", features = [ "zlib" ] }

[features]
gresource = [ "dep:xml-rs", "dep:serde-xml-rs", "dep:json", "dep:flate2" ]
glib = [ "dep:glib" ]
default = []

