[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/felinira/gvdb-rs"
keywords = ["gvdb", "glib", "gresource", "compile-resources"]
categories = ["gui", "data-structures", "encoding"]

[workspace]
resolver = "2"

default-members = ["gvdb", "gvdb-macros"]
members = ["gvdb", "gvdb-macros", "fuzz"]
