[package]
name = "gvdb-macros"
version = "0.1.14"
description = "Convenience macros for gvdb"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
gvdb = { version = "0.8", default-features = false, features = [
    "gresource",
], path = "../gvdb" }
proc-macro2 = "1.0"
litrs = "0.4"
quote = "1.0"
